$Id$


****************************** DRUPAL 7 - 2.x BRANCH ********************************

January 29, 2011
----------------
NOISSUE by troky: Fixed wrongly constructed query in advanced_forum_unread_replies_in_forum().
#1042636 by troky: Fixed Forum Access module compatibility.

January 28, 2011
----------------
#1042664 by troky: Fixed variable name mismatch in advanced_forum_statistics_replies().
#1031712 by troky: Improved CSS to give structure to empty forums.
#1041426 by __Sander__: Wrapped forum tools menu items in t().

January 27, 2011
----------------
#1041128 by troky: Fixed PHP 5.3 strict warnings.
#992428 by Michelle: Fixed mark as read so it's not displayed on containers.

January 26, 2011
----------------
#935778 by troky, Michelle: Remove 'views' column when statistics not enabled.
NOISSUE by Michelle: Removed topic icon from unsanswered view as it caused notices and served no purposes.
#1031712 by Michelle: Gave structure to topic list empty view div to avoid layout issues when there are no topics in a forum.
#1001524 by Michelle: Created content types for forum tools and node create list.
#935322 / #1001524 by Michelle Got PM version in sync with non PM version.
#1031712 by troky: Fixed parsing of advanced_forum_forum_disabled variable.
#1040958 by troky: Fixed deleting all module variables in advanced_forum_uninstall()
NOISSUE by troky: Fixed formatting of some files, mostly newline characters.
NOISSUE by troky: Fixed 'Empty text' field in views definitions.

January 24, 2011
----------------
NOISSUE by troky: Removed extra character from advanced_forum_group_topic_list.view.
NOISSUE by troky: Fixed/changed default style to Silver Bells in settings.
NOISSUE by troky: Added missing filter parameter to views definition. Updated unanswered topics view.
#1023078 by troky: Fixed bunch of notices and undefined variable errors when previewing new topic.
#1037724 by gordon: Moved Advanced forum configuration menu into configuration page.